changed security config, changed security key for jwt